--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"token":"NDAzNzE1NDQyMjAxNTkxODE4.DY8saQ.60dySm8eIJnErGcnv8dK8MPE6Ys","client":"403715442201591818","tag":"y.","case":"false","separator":"\\s+","ownerId":"265309719525195796"}
+{"token":This was stolen once and it will not be stolen again. Fuck off my bot.,"client":"403715442201591818","tag":"y.","case":"false","separator":"\\s+","ownerId":"265309719525195796"}
